--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,14 @@
     <string name="warning">Warning</string>
     <string name="later">Later</string>
 
-    <!-- Main  -->
+    <!-- Startup  -->
+    <string name="sampledata">Sample data</string>
+    <string name="loadsampledata">Would you like to load the sample data provided?</string>
+
+    <!-- Miscellaneous  -->
+    <string name="maxphotos">Maximum number of photos</string>
+
+    <!-- Main Activity  -->
     <string name="search">Search</string>
     <string name="resources">Resources</string>
     <string name="currentvalue">Current value</string>
@@ -33,28 +40,30 @@
     <string name="theme">Theme</string>
     <string name="lock_data">Lock data</string>
     <string name="unlock_data">Unlock data</string>
+    <string name="nomatches">No matching value</string>
+    <string name="nextmissingbutton">Next empty entry</string>
+    <string name="jumptoplotidbutton">Go to ID</string>
+    <string name="barcodescantitle">Scan barcode</string>
+    <string name="scan">Scan</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
 
-    <!-- Trait layouts and messages -->
-    <string name="minusday">-1</string>
-    <string name="enter">Enter</string>
-    <string name="plusday">+1</string>
-    <string name="nodate">No Date</string>
-    <string name="record">Record</string>
-    <string name="play">Play</string>
-    <string name="capture">Capture</string>
-    <string name="stop">Stop</string>
-    <string name="stored">Data has been saved</string>
+    <!-- Fields Activity  -->
+    <string name="delete_field">Delete field</string>
+    <string name="delete_field_confirmation">Are you sure you want to delete this field? This will also delete all data associated with this field.</string>
+    <string name="field_exists">Field exists</string>
+    <string name="field_exists_message">A field with this name already exists.</string>
+    <string name="choose_new_default">Select or load a new field before collecting data.</string>
+    <string name="choose_new_field">Select or import a new field.</string>
+    <string name="dateimported">Import date</string>
+    <string name="dateedited">Edit date</string>
+    <string name="dateexported">Export date</string>
+    <string name="fieldsummary">Field summary</string>
+    <string name="options">Options</string>
+    <string name="walkingorder">Sort entries by:</string>
+    <string name="statistics">Stats</string>
 
-    <string name="hardwaremissing">Your device does not contain the necessary hardware for this feature</string>
-    <string name="photomissing">Photo does not exist</string>
-    <string name="photodecodefail">Photo cannot be read</string>
-    <string name="valueless">Value is less than allowed minimum</string>
-    <string name="valuemore">Value is larger than allowed maximum</string>
-    <string name="rustwarning">Severity already stored</string>
-    <string name="deletePhoto">Are you sure you want to delete this photo?</string>
-    <string name="delete_trait_warning">Deleting a trait also deletes data that has been collected for that trait. Are you sure you want to delete this trait?</string>
-
-    <!-- Settings -->
+    <!-- Settings Activity  -->
     <string name="settings">Settings</string>
     <string name="fields">Fields</string>
     <string name="traits">Traits</string>
@@ -64,10 +73,7 @@
     <string name="language">Language</string>
     <string name="updatemsg">Changelog</string>
 
-    <string name="sampledata">Sample data</string>
-    <string name="loadsampledata">Would you like to load the sample data provided?</string>
-
-    <!-- Traits -->
+    <!-- Traits Activity  -->
     <string name="traitname">Trait name</string>
     <string name="sort">Sort</string>
     <string name="delete">Delete</string>
@@ -115,7 +121,25 @@
 
     <string name="trait_export_check">Would you like to export the current trait list before importing a new list?</string>
 
-    <!-- Preferences -->
+    <!-- Export  -->
+    <string name="dbformat">Database</string>
+    <string name="tableformat">Table</string>
+    <string name="filename">Filename</string>
+    <string name="headerformat">Format</string>
+    <string name="allcolumns">All imported columns</string>
+    <string name="fieldcolumns">Field columns</string>
+    <string name="onlyunique">Only unique identifier</string>
+    <string name="alltraits">All traits</string>
+    <string name="activetraits">Only active traits</string>
+    <string name="exporterror">Error during export</string>
+    <string name="exportcomplete">Export complete</string>
+    <string name="exportmsg">Exporting…</string>
+    <string name="noexportcheck">Export type must be selected</string>
+    <string name="nofieldcheck">Field column type must be selected</string>
+    <string name="notraitcheck">Trait type must be selected</string>
+    <string name="overwrite_previous_export">Overwrite previously exported file</string>
+
+    <!-- Preferences Activity  -->
     <string name="preferences_ui">Interface</string>
     <string name="preferences_ux">Experience</string>
     <string name="preferences_files_naming">Files and Naming</string>
@@ -126,7 +150,6 @@
     <string name="entry_arrow_right">Right</string>
     <string name="entry_arrow_both">Both</string>
 
-    <!-- Advanced settings -->
     <string name="tips">Tutorial</string>
     <string name="quickgoto">Quick GoTo</string>
     <string name="cycle">Cycling traits advances entry</string>
@@ -147,6 +170,7 @@
     <string name="toolbar_summary">Summary</string>
     <string name="toolbar_lock">Lock</string>
     <string name="navigate_volume_buttons">Remap volume keys for navigation</string>
+    <string name="return_character">Change how the return key signal is used</string>
 
     <string name="language_desc">Language set by system</string>
     <string name="tips_desc">Adds a tutorial icon to the main, settings, fields, and traits screens</string>
@@ -165,14 +189,29 @@
     <string name="infobar_number_desc">Adjust the number of Infobars displayed on the main screen</string>
     <string name="navigate_volume_buttons_desc">Volume keys go to next or last entry</string>
 
+    <string name="return_next_plot">Next plot</string>
+    <string name="return_next_trait">Next trait</string>
+    <string name="return_do_nothing">Do nothing</string>
 
-    <!-- Advanced settings titles and messages -->
-    <string name="nomatches">No matching value</string>
-    <string name="nextmissingbutton">Next empty entry</string>
-    <string name="jumptoplotidbutton">Go to ID</string>
-    <string name="barcodescantitle">Scan barcode</string>
-    <string name="scan">Scan</string>
-    <string name="disableentryanavwarning">Data must be collected before you can go to the next entry</string>
+    <!-- Trait layouts and messages -->
+    <string name="minusday">-1</string>
+    <string name="enter">Enter</string>
+    <string name="plusday">+1</string>
+    <string name="nodate">No Date</string>
+    <string name="record">Record</string>
+    <string name="play">Play</string>
+    <string name="capture">Capture</string>
+    <string name="stop">Stop</string>
+    <string name="stored">Data has been saved</string>
+
+    <string name="hardwaremissing">Your device does not contain the necessary hardware for this feature</string>
+    <string name="photomissing">Photo does not exist</string>
+    <string name="photodecodefail">Photo cannot be read</string>
+    <string name="valueless">Value is less than allowed minimum</string>
+    <string name="valuemore">Value is larger than allowed maximum</string>
+    <string name="rustwarning">Severity already stored</string>
+    <string name="deletePhoto">Are you sure you want to delete this photo?</string>
+    <string name="delete_trait_warning">Deleting a trait also deletes data that has been collected for that trait. Are you sure you want to delete this trait?</string>
 
     <!-- Tutorial -->
     <string name="tutorial">Tutorial</string>
@@ -211,6 +250,7 @@
     <string name="version">Version</string>
     <string name="developers">Developers</string>
     <string name="translators">Translators</string>
+    <string name="otherapps">Other Apps</string>
 
     <string name="versiontitle">Version: </string>
     <string name="devr">Trevor Rife, Kansas State University</string>
@@ -220,27 +260,6 @@
     <string name="devpemail">jpoland@ksu.edu</string>
     <string name="devpsite">http://wheatgenetics.org</string>
     <string name="translist">Irazema Fuentes-Bueno,  Sandra Dunckel,  Shuangye Wu,  Narinder Singh,  Daljit Singh,  Erena Edae,  Tatiana Danilova,  Rodrigo Pedrozo,  Cristiano Lemes da Silva,  Sophie Bouchet,  Hiroyoshi Iwata,  Goro Ishikawa,  Khaled El-Shamaa, Mokhlesur Rahman, Alice Brunazzi</string>
-
-    <!-- Other Apps -->
-    <string name="otherapps">Other Apps</string>
-
-    <!-- Export dialog -->
-    <string name="dbformat">Database</string>
-    <string name="tableformat">Table</string>
-    <string name="filename">Filename</string>
-    <string name="headerformat">Format</string>
-    <string name="allcolumns">All imported columns</string>
-    <string name="fieldcolumns">Field columns</string>
-    <string name="onlyunique">Only unique identifier</string>
-    <string name="alltraits">All traits</string>
-    <string name="activetraits">Only active traits</string>
-    <string name="exporterror">Error during export</string>
-    <string name="exportcomplete">Export complete</string>
-    <string name="exportmsg">Exporting…</string>
-    <string name="noexportcheck">Export type must be selected</string>
-    <string name="nofieldcheck">Field column type must be selected</string>
-    <string name="notraitcheck">Trait type must be selected</string>
-    <string name="overwrite_previous_export">Overwrite previously exported file</string>
 
     <!-- Language dialog -->
     <string name="english">English (US)</string>
@@ -262,13 +281,6 @@
     <string name="chiga">Chiga</string>
     <string name="bengali">বাংলা</string>
     <string name="swedish">Swedish</string>
-
-    <!-- Update dialog -->
-    <string name="notmostrecent">You do not have the most recent version of Field Book!</string>
-    <string name="newversion">An update is available for Field Book. Would you like to download and install the new version?</string>
-    <string name="update">Update</string>
-    <string name="installnow">Install now</string>
-    <string name="googleplay">Open Google Play</string>
 
     <!-- Setup dialog -->
     <string name="person">Person</string>
@@ -323,7 +335,7 @@
     <string name="createtraitserror">Create traits before modifying them.</string>
     <string name="exporttraiterror">No data exists to export</string>
 
-    <!-- Search dialog -->
+    <!-- Search Activity -->
     <string name="results">Search results</string>
     <string name="range">Range</string>
     <string name="plot">Plot</string>
@@ -337,89 +349,9 @@
     <string name="lessthan">is less than</string>
     <string name="searchempty">No results</string>
 
-    <!-- Field management strings -->
-    <string name="delete_field">Delete field</string>
-    <string name="delete_field_confirmation">Are you sure you want to delete this field? This will also delete all data associated with this field.</string>
-    <string name="field_exists">Field exists</string>
-    <string name="field_exists_message">A field with this name already exists.</string>
-    <string name="choose_new_default">Select or load a new field before collecting data.</string>
-    <string name="dateimported">Import date</string>
-    <string name="dateedited">Edit date</string>
-    <string name="dateexported">Export date</string>
-    <string name="fieldsummary">Field summary</string>
-    <string name="options">Options</string>
-    <string name="walkingorder">Sort entries by:</string>
-    <string name="statistics">Stats</string>
-
-    <!-- Drawer strings -->
-    <string name="drawer_open">Open navigation drawer</string>
-    <string name="drawer_close">Close navigation drawer</string>
-
     <!-- Citation strings -->
     <string name="citation_title">Citation</string>
     <string name="citation_string">If you utilize Field Book for research, please cite the following journal article:</string>
     <string name="citation_text">Rife, T.W., and J.A. Poland. 2014. Field Book: An Open-Source Application for Field Data Collection on Android. Crop Sci. 54(4): 1624–1627.</string>
 
-
-    <!-- Strings below here have not been integrated into the app -->
-
-    <!-- Customization strings TODO -->
-    <string name="customize">Customize</string>
-    <string name="export_name">Exported file names</string>
-    <string name="photo_name">Photo names</string>
-    <string name="toolbar">Toolbar</string>
-    <string name="custom_field_name">Field Name</string>
-    <string name="custom_date">Date</string>
-    <string name="custom_unique_id">Unique identifier</string>
-    <string name="custom_trait">Trait</string>
-
-    <!-- Map -->
-    <string name="importlocmessage">Choose the columns corresponding to the four corners of each entry.</string>
-    <string name="importloc">Import plot location data</string>
-    <string name="corner1">Corner 1</string>
-    <string name="corner2">Corner 2</string>
-    <string name="corner3">Corner 3</string>
-    <string name="corner4">Corner 4</string>
-    <string name="topleft">Top left</string>
-    <string name="topright">Top right</string>
-    <string name="btmleft">Bottom left</string>
-    <string name="btmright">Bottom right</string>
-    <string name="zoomin">Zoom in</string>
-    <string name="map">Map</string>
-    <string name="mapconfig">Configure map</string>
-    <string name="notraits">No traits selected</string>
-    <string name="mapsummary">Summary</string>
-    <string name="analyzewait">Processing…</string>
-    <string name="serpentine">Serpentine</string>
-    <string name="zigzag">Zigzag</string>
-    <string name="orientation">Orientation</string>
-    <string name="fieldlayout">First corner in:</string>
-    <string name="direction">Field starts in…</string>
-    <string name="mapanalyze">Analyze</string>
-    <string name="enablemap">Map</string>
-
-    <!-- Network -->
-    <string name="sync">Sync</string>
-    <string name="datamigration">Migrate data</string>
-    <string name="networkerror">General network error</string>
-    <string name="explainsend">Selecting a device will begin the data transfer process.</string>
-    <string name="autodetectDevices">Discovering devices…</string>
-    <string name="searching">Searching</string>
-    <string name="devicename">Device name</string>
-    <string name="dbnetworkshare">Register device on network</string>
-    <string name="dbnetworkfind">Share data with device</string>
-    <string name="dbsharestatus">Registration status</string>
-    <string name="dbconnectedto">Connected to:</string>
-    <string name="dbsync">Send database</string>
-    <string name="shareok">Registration succeeded</string>
-    <string name="sharefail">Registration failed. Please try again later.</string>
-    <string name="checkingshare">Please wait…</string>
-    <string name="findfail">No devices found</string>
-    <string name="devicelist">Device list</string>
-    <string name="sendfail">Unable to send file</string>
-    <string name="filesent">File has been transferred</string>
-
-    <!-- Miscellaneous -->
-    <string name="deletespecified">Delete selected</string>
-    <string name="maxphotos">Maximum number of photos</string>
 </resources>
