--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Common -->
-    <string name="app_name">মাঠ বহি</string>
-    <string name="cancel">বাতিল</string>
-    <string name="okay">ঠিক আছে</string>
+    <string name="field_book">মাঠ বহি</string>
+    <string name="dialog_cancel">বাতিল</string>
+    <string name="dialog_ok">ঠিক আছে</string>
     <string name="genericerror">সমস্যা</string>
-    <string name="yes">হ্যাঁ</string>
-    <string name="no">না</string>
-    <string name="close">বন্ধ</string>
-    <string name="areyousure">আপনি কি নিশ্চিত?</string>
-    <string name="importdb">প্রবেশ করানো</string>
-    <string name="warning">সতর্কতা</string>
+    <string name="dialog_yes">হ্যাঁ</string>
+    <string name="dialog_no">না</string>
+    <string name="dialog_close">বন্ধ</string>
+    <string name="dialog_confirm">আপনি কি নিশ্চিত?</string>
+    <string name="dialog_import">প্রবেশ করানো</string>
+    <string name="dialog_warning">সতর্কতা</string>
     <string name="later">পরবর্তীতে</string>
     <!-- Main  -->
-    <string name="search">অনুসান্ধান</string>
-    <string name="resources">উপাকরন সমূহ</string>
+    <string name="main_toolbar_search">অনুসান্ধান</string>
+    <string name="main_toolbar_resources">উপাকরন সমূহ</string>
     <string name="currentvalue">বর্তমান মান</string>
-    <string name="traitdetails">বৈশিষ্ট্যের বিস্তারিত</string>
-    <string name="nodata">উপাত্তহীন</string>
-    <string name="theme">ধারণা</string>
-    <string name="lock_data">বন্ধ উপাত্ত</string>
-    <string name="unlock_data">খোলা উপাত্ত</string>
+    <string name="main_trait_details">বৈশিষ্ট্যের বিস্তারিত</string>
+    <string name="main_infobar_no_data">উপাত্তহীন</string>
+    <string name="settings_customize_theme">ধারণা</string>
+    <string name="main_toolbar_lock_data">বন্ধ উপাত্ত</string>
+    <string name="main_toolbar_unlock_data">খোলা উপাত্ত</string>
     <!-- Trait layouts and messages -->
     <string name="minusday">- ১</string>
     <string name="enter">প্রবেশ করানো</string>
@@ -39,55 +39,55 @@
     <string name="rustwarning">প্রকোপতা সংরক্ষিত রয়েছে</string>
     <string name="deletePhoto">আপনি কি নিশ্চিত ছবিটি মুছে ফেলতে চান ?</string>
     <!-- Settings -->
-    <string name="settings">বিন্যস্ত করা</string>
-    <string name="fields">ক্ষেত্রসমূহ</string>
-    <string name="traits">বৈশিষ্ট্য</string>
-    <string name="profile">বৃত্তান্ত</string>
-    <string name="export">দিয়ে দেয়া</string>
-    <string name="advanced">অগ্রসরমান</string>
-    <string name="language">ভাষা</string>
-    <string name="updatemsg">লগ পরিবর্তন</string>
-    <string name="sampledata">নমুনা উপাত্ত</string>
-    <string name="loadsampledata">সরবরাহকৃত নমুনা উপাত্ত কি লোড করতে চান ?</string>
+    <string name="settings_title">বিন্যস্ত করা</string>
+    <string name="settings_fields">ক্ষেত্রসমূহ</string>
+    <string name="settings_traits">বৈশিষ্ট্য</string>
+    <string name="settings_profile">বৃত্তান্ত</string>
+    <string name="settings_export">দিয়ে দেয়া</string>
+    <string name="settings_advanced">অগ্রসরমান</string>
+    <string name="preferences_interface_language">ভাষা</string>
+    <string name="settings_changelog_title">লগ পরিবর্তন</string>
+    <string name="startup_sample_data_title">নমুনা উপাত্ত</string>
+    <string name="startup_sample_data_message">সরবরাহকৃত নমুনা উপাত্ত কি লোড করতে চান ?</string>
     <!-- Traits -->
-    <string name="traitname">বৈশিষ্ট্যের নাম</string>
-    <string name="sort">বাছাই করা</string>
-    <string name="delete">মুছে ফেলা</string>
-    <string name="visibility">দৃশ্যমান</string>
-    <string name="optional">সিথিলযোগ</string>
-    <string name="addtrait">বৈশিষ্ট্য যোগ করুন</string>
-    <string name="copy">আনুলিপি</string>
-    <string name="edit">সংস্করণ</string>
-    <string name="numeric">সংখ্যাসূচক</string>
-    <string name="qualitative">পরম</string>
-    <string name="date">উপাত্ত</string>
-    <string name="percent">শতকরা</string>
-    <string name="counter">বিপরীত দিকে</string>
-    <string name="rustrating">মরিচা রোগের প্রকোপতা</string>
-    <string name="bool">সাংকেতিক চিহ্ন</string>
-    <string name="text">লেখা</string>
-    <string name="photo">ছবি</string>
-    <string name="audio">শ্রবণ সংক্রান্ত</string>
-    <string name="multicategorical">বৃদ্ধি করা</string>
-    <string name="trait">বৈশিষ্ট্য</string>
-    <string name="format">ছক</string>
-    <string name="def">নির্দিষ্ট</string>
-    <string name="minimum">সর্বনিম্ন</string>
-    <string name="maximum">সরবচ্চ</string>
-    <string name="details">বিস্তারিত</string>
-    <string name="categories">শ্রেণি/ভাগ</string>
-    <string name="save">সঞ্চিত করা</string>
-    <string name="importexport">ভীতারে নিয়ে আসা/ বাহিরে পাঠানো</string>
-    <string name="import_title">উত্তোলন</string>
-    <string name="truevalue">সঠিক</string>
-    <string name="falsevalue">মিথ্যা</string>
-    <string name="catseparator">শ্রেনিসমুহকে আলাদা কারুন</string>
-    <string name="mandatorytrait">বৈশিষ্ট্যের নাম ফাকা থাকতে পারে না</string>
-    <string name="traitexists">বৈশিষ্ট্যটি আগে থেকেই উপাস্থিত</string>
-    <string name="deletetrait">বিশিষ্টটি মুছে ফেলুন</string>
-    <string name="deletealltraits">সকল বৈশিষ্ট্যই মুছে ফেলুন</string>
-    <string name="notanumber">নির্দিষ্টতা, সর্বনিম্ন, এবং সরবুচ্চ এগুলো অবশ্যই নম্বর হতে হবে</string>
-    <string name="notemptycategory">শ্রেণি/বিভাগ ফাকা থাকতে পারে না</string>
+    <string name="traits_sort_trait_name">বৈশিষ্ট্যের নাম</string>
+    <string name="traits_sort_title">বাছাই করা</string>
+    <string name="traits_options_delete">মুছে ফেলা</string>
+    <string name="traits_sort_visibility">দৃশ্যমান</string>
+    <string name="traits_create_optional">সিথিলযোগ</string>
+    <string name="traits_toolbar_add_trait">বৈশিষ্ট্য যোগ করুন</string>
+    <string name="traits_options_copy">আনুলিপি</string>
+    <string name="traits_options_edit">সংস্করণ</string>
+    <string name="traits_format_numeric">সংখ্যাসূচক</string>
+    <string name="traits_format_categorical">পরম</string>
+    <string name="traits_format_date">উপাত্ত</string>
+    <string name="traits_format_percent">শতকরা</string>
+    <string name="traits_format_counter">বিপরীত দিকে</string>
+    <string name="traits_format_disease_rating">মরিচা রোগের প্রকোপতা</string>
+    <string name="traits_format_boolean">সাংকেতিক চিহ্ন</string>
+    <string name="traits_format_text">লেখা</string>
+    <string name="traits_format_photo">ছবি</string>
+    <string name="traits_format_audio">শ্রবণ সংক্রান্ত</string>
+    <string name="traits_format_multicategorical">বৃদ্ধি করা</string>
+    <string name="traits_create_trait">বৈশিষ্ট্য</string>
+    <string name="traits_create_format">ছক</string>
+    <string name="traits_create_value_default">নির্দিষ্ট</string>
+    <string name="traits_create_value_minimum">সর্বনিম্ন</string>
+    <string name="traits_create_value_maximum">সরবচ্চ</string>
+    <string name="traits_create_details">বিস্তারিত</string>
+    <string name="traits_create_categories_title">শ্রেণি/ভাগ</string>
+    <string name="dialog_save">সঞ্চিত করা</string>
+    <string name="traits_toolbar_import_export">ভীতারে নিয়ে আসা/ বাহিরে পাঠানো</string>
+    <string name="traits_dialog_import">উত্তোলন</string>
+    <string name="traits_create_true">সঠিক</string>
+    <string name="traits_create_false">মিথ্যা</string>
+    <string name="traits_create_categories_text">শ্রেনিসমুহকে আলাদা কারুন</string>
+    <string name="traits_create_warning_name_empty">বৈশিষ্ট্যের নাম ফাকা থাকতে পারে না</string>
+    <string name="traits_create_warning_duplicate">বৈশিষ্ট্যটি আগে থেকেই উপাস্থিত</string>
+    <string name="traits_options_delete_dialog_title">বিশিষ্টটি মুছে ফেলুন</string>
+    <string name="traits_toolbar_delete_all">সকল বৈশিষ্ট্যই মুছে ফেলুন</string>
+    <string name="traits_create_warning_numeric_required">নির্দিষ্টতা, সর্বনিম্ন, এবং সরবুচ্চ এগুলো অবশ্যই নম্বর হতে হবে</string>
+    <string name="traits_create_warning_categories_required">শ্রেণি/বিভাগ ফাকা থাকতে পারে না</string>
     <!-- Advanced settings -->
     <string name="tips">শিক্ষাদান সম্পর্কিত</string>
     <string name="quickgoto">দ্রুত গমন করুন</string>
@@ -116,12 +116,11 @@
     <string name="jumptoplotid_desc">স্বতন্ত্র পরিচয়ের খোলার জন্য ডায়ালগ খুলুন এবং নির্ধারিত এন্ট্রিতে যান</string>
     <string name="datagrid_desc">সংগৃহীত উপাত্তবিশিষ্ট ক্ষেত্র এবং বৈশিষ্ট্যসমূহের বিস্তৃত পাতা দেখান</string>
     <!-- Advanced settings titles and messages -->
-    <string name="nomatches">কোন সাদৃশ্য মান নাই</string>
-    <string name="nextmissingbutton">পরবর্তী ফাঁকা এন্ট্রি</string>
-    <string name="jumptoplotidbutton">আইডিতে যান</string>
-    <string name="barcodescantitle">বারকোড স্ক্যান করুন</string>
-    <string name="scan">স্ক্যান করুন</string>
-    <string name="disableentryanavwarning">পরবর্তী এন্ট্রিতে যাওয়ার আগে অবশ্যই উপাত্ত সংগ্রহ করতে হবে</string>
+    <string name="main_toolbar_moveto_no_match">কোন সাদৃশ্য মান নাই</string>
+    <string name="main_toolbar_next_entry_no_data">পরবর্তী ফাঁকা এন্ট্রি</string>
+    <string name="main_toolbar_moveto">আইডিতে যান</string>
+    <string name="main_toolbar_barcode_scan_title">বারকোড স্ক্যান করুন</string>
+    <string name="main_toolbar_moveto_scan">স্ক্যান করুন</string>
     <!-- Tutorial -->
     <string name="tutorial">টিউটোরিয়াল</string>
     <string name="tipsdesc">আপনি কি টিউটোরিয়াল সক্ষম করতে চান? এই সাজানোকে অতিরিক্তমাত্রায় সাজানোতে পরিবর্তন করা যায়</string>
@@ -151,14 +150,14 @@
     <string name="fhelp4">কোন ক্ষেত্র মুছতে চাইলে ক্ষেত্রের নামের বামের মেনুটি খুলুন এবং মুছে ফেলা নির্বাচন করুন।</string>
     <!-- About dialog -->
 
-    <string name="about">সম্বন্ধে</string>
-    <string name="version">ভার্সন</string>
-    <string name="developers">উদ্ভাবনকারী</string>
-    <string name="translators">অনুবাদক</string>
+    <string name="about_title">সম্বন্ধে</string>
+    <string name="about_version">ভার্সন</string>
+    <string name="about_developers_title">উদ্ভাবনকারী</string>
+    <string name="about_translators_title">অনুবাদক</string>
     <string name="versiontitle">ভার্সনঃ</string>
 
     <!-- Other Apps -->
-    <string name="otherapps">অন্যান্য অ্যাপ্স।</string>
+    <string name="about_other_apps_title">অন্যান্য অ্যাপ্স।</string>
 
     <!-- Export dialog -->
     <string name="dbformat">ডাটাবেজ</string>
@@ -198,26 +197,21 @@
     <string name="bengali">বাংলা</string>
     <string name="swedish">Swedish</string>
     <!-- Update dialog -->
-    <string name="notmostrecent">মাঠ বহির সবচেয়ে নতুন ভার্সন কি আপনার কাছে নাই!</string>
-    <string name="newversion">মাঠ বহির জন্য একটি আপডেট বিদ্যমান। আপনি কি নতুন ভার্সন নামাতে এবং ইন্সটল করতে চান?</string>
-    <string name="update">আপডেট</string>
-    <string name="installnow">এখন ইন্সটল করুন</string>
-    <string name="googleplay">গোগল প্লে খুলুন</string>
     <!-- Setup dialog -->
-    <string name="person">বেক্তি</string>
-    <string name="location">স্থান</string>
+    <string name="profile_person">বেক্তি</string>
+    <string name="profile_location">স্থান</string>
     <string name="drop1">ইনফবার ১</string>
     <string name="drop2">ইনফবার ২</string>
     <string name="drop3">ইনফবার ৩</string>
-    <string name="clearsettings">সেটিং পরিষ্কার করুন</string>
-    <string name="personsetup">বেক্তি সেট করুন</string>
-    <string name="firstname">নামের প্রথম অংশ</string>
-    <string name="lastname">নামের শেষ অংশ</string>
+    <string name="profile_reset">সেটিং পরিষ্কার করুন</string>
+    <string name="profile_person_title">বেক্তি সেট করুন</string>
+    <string name="profile_name_first">নামের প্রথম অংশ</string>
+    <string name="profile_name_last">নামের শেষ অংশ</string>
     <string name="none">কিছুই না</string>
-    <string name="locationsetup">স্থান সেট করুন</string>
-    <string name="latitude">অক্ষাংশ</string>
-    <string name="longitude">দ্রাঘিমাংশ</string>
-    <string name="getlocation">স্থান দেখুন</string>
+    <string name="profile_location_title">স্থান সেট করুন</string>
+    <string name="profile_location_latitude">অক্ষাংশ</string>
+    <string name="profile_location_longitude">দ্রাঘিমাংশ</string>
+    <string name="profile_get_location">স্থান দেখুন</string>
     <!-- Database dialog -->
     <string name="dbbackup">ডাটাবেজ</string>
     <string name="resetcomplete">ডাটাবেজ মুছে ফেলা হয়েছে</string>
@@ -244,89 +238,38 @@
     <string name="createtraitserror">বৈশিষ্ট্য তৈরি করুন তাদেরকে পরিবর্তনের পূর্বেই।</string>
     <string name="exporttraiterror">পাঠানোর জন্য কোন উপাত্ত নেই</string>
     <!-- Search dialog -->
-    <string name="results">অনুসন্ধান ফল</string>
-    <string name="range">ব্যাপ্তি</string>
-    <string name="plot">প্লট</string>
-    <string name="add">যোগ করুন</string>
-    <string name="clear">পরিষ্কার করুন</string>
-    <string name="equalsto">সমান</string>
-    <string name="notequalsto">সমান নয়</string>
-    <string name="islike">ধারণ করে</string>
-    <string name="notislike">ধারণ করেনা</string>
-    <string name="morethan">চেয়ে বেশি</string>
-    <string name="lessthan">চেয়ে কম</string>
-    <string name="searchempty">কোন ফল নেই</string>
+    <string name="search_results_dialog_title">অনুসন্ধান ফল</string>
+    <string name="search_results_dialog_range">ব্যাপ্তি</string>
+    <string name="search_results_dialog_plot">প্লট</string>
+    <string name="search_dialog_add">যোগ করুন</string>
+    <string name="search_dialog_clear">পরিষ্কার করুন</string>
+    <string name="search_dialog_query_is_equal_to">সমান</string>
+    <string name="search_dialog_query_is_not_equal_to">সমান নয়</string>
+    <string name="search_dialog_query_contains">ধারণ করে</string>
+    <string name="search_dialog_query_does_not_contain">ধারণ করেনা</string>
+    <string name="search_dialog_query_is_more_than">চেয়ে বেশি</string>
+    <string name="search_dialog_query_is_less_than">চেয়ে কম</string>
+    <string name="search_results_missing">কোন ফল নেই</string>
     <!-- Field management strings -->
-    <string name="delete_field">ক্ষেত্র মুছে ফেলুন</string>
-    <string name="delete_field_confirmation">আপনি কি নিশ্চিত যে আপনি ক্ষেত্রটি মুছে ফেলতে চান? এটি ক্ষেত্রের সাথে সম্পৃক্ত সমস্ত উপাত্তও মুছে দিবে।</string>
-    <string name="field_exists">ক্ষেত্র বিদ্যমান</string>
-    <string name="field_exists_message">এ নামের ক্ষেত্র ইতিমধ্যেই বিদ্যমান। আপনি কি বিদ্যমান ক্ষেত্রের উপরে লিখতে চান?</string>
+    <string name="fields_delete_study">ক্ষেত্র মুছে ফেলুন</string>
+    <string name="fields_delete_study_confirmation">আপনি কি নিশ্চিত যে আপনি ক্ষেত্রটি মুছে ফেলতে চান? এটি ক্ষেত্রের সাথে সম্পৃক্ত সমস্ত উপাত্তও মুছে দিবে।</string>
+    <string name="fields_study_exists_title">ক্ষেত্র বিদ্যমান</string>
+    <string name="fields_study_exists_message">এ নামের ক্ষেত্র ইতিমধ্যেই বিদ্যমান। আপনি কি বিদ্যমান ক্ষেত্রের উপরে লিখতে চান?</string>
     <string name="choose_new_default">উপাত্ত সংগ্রহের পূর্বে নতুন ক্ষেত্র লোড করুন।</string>
-    <string name="dateimported">উত্তোলনের তারিখ</string>
-    <string name="dateedited">পরিমার্জনের তারিখ</string>
-    <string name="dateexported">পাঠানোর তারিখ</string>
-    <string name="fieldsummary">মাঠ সারাংশ</string>
-    <string name="options">পছন্দ</string>
+    <string name="fields_date_imported">উত্তোলনের তারিখ</string>
+    <string name="fields_date_edited">পরিমার্জনের তারিখ</string>
+    <string name="fields_date_exported">পাঠানোর তারিখ</string>
+    <string name="fields_summary">মাঠ সারাংশ</string>
+    <string name="fields_options">পছন্দ</string>
     <string name="walkingorder">এন্ট্রিসমূহের বাছাইকরণঃ</string>
     <!-- Drawer strings -->
-    <string name="drawer_open">নেভিগেশন ড্রয়ার খুলুন</string>
-    <string name="drawer_close">নেভিগেশন ড্রয়ার বন্ধ করুন</string>
+    <string name="main_drawer_open">নেভিগেশন ড্রয়ার খুলুন</string>
+    <string name="main_drawer_close">নেভিগেশন ড্রয়ার বন্ধ করুন</string>
     <!-- Strings below here have not been integrated into the app -->
     <!-- Customization strings TODO -->
-    <string name="customize">নিজের মতো করে তৈরি করুন</string>
     <string name="infobar_number">তথ্যবারের সংখ্যা</string>
-    <string name="export_name">পাঠানো নথির নাম</string>
-    <string name="photo_name">ছবির নাম</string>
-    <string name="toolbar">টুলবার</string>
-    <string name="custom_field_name">ক্ষেত্রের নাম</string>
-    <string name="custom_date">তারিখ</string>
-    <string name="custom_unique_id">একক পরিচায়ক</string>
-    <string name="custom_trait">বৈশিষ্ট্য</string>
     <!-- Map -->
-    <string name="importlocmessage">প্রত্যেকটি এন্ট্রির চারটি কোনা অনুযায়ী কলামসমুহ পছন্দ করুন।</string>
-    <string name="importloc">প্লটের অবস্থানের উপাত্ত উঠান</string>
-    <string name="corner1">কোনা ১</string>
-    <string name="corner2">কোনা ২</string>
-    <string name="corner3">কোনা ৩</string>
-    <string name="corner4">কোনা ৪</string>
-    <string name="topleft">উপরে বাম</string>
-    <string name="topright">উপরে ডান</string>
-    <string name="btmleft">নিচে বাম</string>
-    <string name="btmright">নিচে ডান</string>
-    <string name="zoomin">বড করুন</string>
-    <string name="map">মানচিত্র</string>
-    <string name="mapconfig">মানচিত্র নির্ণয় করুন</string>
-    <string name="notraits">কোন বৈশিষ্ট্যই নির্বাচন করা হয়নি</string>
-    <string name="mapsummary">সারাংশ</string>
-    <string name="analyzewait">বেবস্থা করা হচ্ছে</string>
-    <string name="serpentine">সাদৃশ্য</string>
-    <string name="zigzag">আঁকাবাঁকা</string>
-    <string name="orientation">অবস্থান</string>
-    <string name="fieldlayout">প্রথম কোনাঃ</string>
-    <string name="direction">মাঠ শুরু হয়ঃ</string>
-    <string name="mapanalyze">পরীক্ষা করুন</string>
-    <string name="enablemap">মানচিত্র</string>
     <!-- Network -->
-    <string name="sync">সমঐক্য বা সমতান</string>
-    <string name="datamigration">উপাত্ত স্থানান্তর করুন</string>
-    <string name="networkerror">সাধারণ নেটওয়ার্ক সমস্যা</string>
-    <string name="explainsend">কোন ডিভাইস নির্বাচন করলে তা উপাত্ত স্থানান্তর করা শুরু করবে</string>
-    <string name="autodetectDevices">আবিষ্কারক ডিভাইস</string>
-    <string name="searching">অনুসন্ধান করছে</string>
-    <string name="devicename">ডিভাইসের নাম</string>
-    <string name="dbnetworkshare">ডিভাইস নেটওয়ার্কে রেজিস্টার করুন</string>
-    <string name="dbnetworkfind">ডিভাইসের দ্বারা উপাত্ত শেয়ার করুন</string>
-    <string name="dbsharestatus">রেজিস্ট্রেশন এর অবস্থা</string>
-    <string name="dbconnectedto">সাথে সম্পৃক্তঃ</string>
-    <string name="dbsync">ডাটাবেজ পাঠান</string>
-    <string name="shareok">রেজিস্ট্রেশন সফলকাম হয়েছে</string>
-    <string name="sharefail">রেজিস্ট্রেশন ব্যরথ হয়েছে। দয়াকরে পরবর্তীতে পুনরায় চেষ্টা করুন।</string>
-    <string name="checkingshare">অনুগ্রহপূর্বক অপেক্ষা করুন</string>
-    <string name="findfail">কোন ডিভাইস পাওয়া যাইনি</string>
-    <string name="devicelist">ডিভাইসের তালিকা</string>
-    <string name="sendfail">নথি পাঠাতে অক্ষম</string>
-    <string name="filesent">নথি স্থানান্তর করা হয়েছে</string>
     <!-- Miscellaneous -->
-    <string name="deletespecified">নির্বাচিতটুকু মুছে ফেলুন</string>
-    <string name="maxphotos">ছবির সরবুচ্চ সংখ্যা</string>
+    <string name="traits_create_photo_maximum">ছবির সরবুচ্চ সংখ্যা</string>
 </resources>
